Opened 10 years ago

Closed 10 years ago

#12326 closed bug (fixed)

Archiving a BBitmap does not always save image data (easy)

Reported by: Pete Owned by: nobody
Priority: normal Milestone: Unscheduled
Component: - General Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

In BeOS, the image data of a BBitmap was always saved when it was archived, whether the "deep" flag was true or false. Haiku currently only saves the image if "deep" is true.

This seems faulty logic, as the intent of archiving is almost invariably to save the image! I can't imagine where one would want to save a bitmap without its image. According to the docs, the "deep" flag is meant to control archiving of attached views; the image data is not a view, though, but part of the bitmap.

"Deep" is true by default, so the disparity doesn't normally cause problems, but it did when porting Sequitur. It uses archived bitmaps for (some) icons, and these were showing up blank. Turned out the deep flag was explicitly being set false. There was no apparent need for this in this case, so it was easily fixed, but I can see it causing worse problems in other cases.

Change History (2)

comment:1 by pulkomandy, 10 years ago

Summary: Archiving a BBitmap does not always save image dataArchiving a BBitmap does not always save image data (easy)

comment:2 by jackburton, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev49577

Note: See TracTickets for help on using tickets.