BBitmap: Archive the data also if "deep" is not set Fixes #12326